API 문서에 스니펫에 해당하는 내용이 적용되지 않은 문제 해결