@@ -64,6 +64,11 @@ test {
 }
 
 asciidoctor {
+    configurations 'asciidoctorExt'
+    inProcess = JAVA_EXEC
+    forkOptions {
+        jvmArgs("--add-opens", "java.base/sun.nio.ch=ALL-UNNAMED", "--add-opens", "java.base/java.io=ALL-UNNAMED")
+    }
     attributes 'snippets': snippetsDir
     inputs.dir snippetsDir
     dependsOn test
